  which made this fork necessary).
  
- LP #391246:  Removed concept of "vocabularies" as a persistently stored
  thing with indirection.  Placed countries data in core karl package as
  const data.

- LP #390868:  Updated OSI logo.

- LP #384841:  Add 'use_cache' kw argument to CachingCatalog to disable
  cache for particular searches.

- Moved settings such as 'system_email_domain' to osi.ini.

- Stop using a custom KarlSecurityPolicy; this policy was identical to
  the WhoInheritingACLSecurityPolicy in repoze.bfg 0.8+.  Use that one
  instead.

3.2 (2009-06-24)
----------------

- LP #387974:  Made 'edit_acl.html' view reindex context in the 'allowed'
  index, as well as invalidating any cached catalog queries.

- Added a simpler people directory implementation to the KARL core.

- For text index converters that use external programs, added a timeout thread
  to kill hanging processes.  Process is considered hanging after 5 seconds.
  This is to work around an error in wvConvert such that it will hang
  indefinitely for certain inputs.


3.1 (2009-06-16)
----------------

- LP #387390:  Add / enable delete profile view, deleting the corresponding
  user as well.

- LP #336714:  Added optional 'reason' argument to 'logout_view', to enable
  overriding the header value passed explaining why the user landed on the
  login form.  Use this argument when returning the logout response from
  another view.

- LP #385580:  Have the "Back to Parent" link not be full width on the <a>.

- LP #385268:  Email index is converted to lower case to facilitate case
  insensitive search.

- LP #385636: Better handling of existing users in invite new users form.


3.0 (2009-06-15)
----------------

- LP #384096: Intersect text index search results last for advanced search,
  improving relevance ranking.

- Micro-speedups for "communities" page.

- LP 386110:

  o Filter items in showtag view according to view permission of
    authenticated user.
